--- a/src/app/pages/profile/contact/contact.component.html
+++ b/src/app/pages/profile/contact/contact.component.html
@@ -1,3 +1,96 @@
-<p>
-  contact works!
-</p>
+<div class="container">
+  <div class="page-content">
+    <div class="title">
+      <h1>CONTACT ME</h1>
+    </div>
+    <div class="col-md-8">
+      <div class="input-box">
+        <div class="placeholder">
+          <div style="float: left">
+            <h4 >Name</h4>
+          </div>
+          <div style="float: right">
+            <h4>Invalid input</h4>
+          </div>
+        </div>
+        <input  type="text">
+      </div>
+
+      <div class="input-box">
+        <div class="placeholder">
+          <div style="float: left">
+            <h4 >Email</h4>
+          </div>
+          <div style="float: right">
+            <h4>Invalid input</h4>
+          </div>
+        </div>
+        <input  type="text">
+      </div>
+
+      <div class="input-box">
+        <div class="placeholder">
+          <div style="float: left">
+            <h4>Phone</h4>
+        </div>
+          <div style="float: right">
+            <h4>Invalid input</h4>
+          </div>
+        </div>
+        <input id="phone" type="text">
+      </div>
+
+      <div class="input-box">
+        <div class="placeholder">
+          <div style="float: left">
+            <h4>Message</h4>
+          </div>
+          <div style="float: right">
+            <h4>Invalid input</h4>
+          </div>
+        </div>
+        <textarea  name="Text1" cols="40" rows="5"></textarea>
+      </div>
+
+      <button class="submit">Submit</button>
+    </div>
+    <div class="col-md-4">
+      <div class="element">
+        <div class="box">
+          <h4 class="header">ADDRESS</h4>
+          <ul>
+            <li><h5>84 Emerald Nook,</h5></li>
+            <li><h5>Freeland, Kansas</h5></li>
+            <li><h5>United States of America</h5></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="element">
+        <div class="box">
+          <h4 class="header">INFO</h4>
+          <ul>
+            <li><h5>Tel.: 562-377-9011</h5></li>
+            <li><h5>Fax: 828-777-4861</h5></li>
+            <li><h5>Email: yourmail@yourmail.com</h5></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="element">
+        <div class="box">
+          <h4 class="header">Find Me On</h4>
+          <ul id="horizontal">
+            <li><a>f</a></li>
+            <li><a>f</a></li>
+            <li><a>f</a></li>
+            <li><a>f</a></li>
+            <li><a>f</a></li>
+            <li><a>f</a></li>
+            <li><a>f</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
