--- a/src/app/pages/profile/home/home.component.html
+++ b/src/app/pages/profile/home/home.component.html
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div class="about">
+      <div class="element">
         <div class="box">
           <h4 class="header">About Me</h4>
           <div class="image">
@@ -24,7 +24,7 @@
       </div>
 
 
-      <div class="about">
+      <div class="element">
         <div class="box">
           <h4 class="header">Find Me On</h4>
           <ul>
@@ -39,21 +39,21 @@
         </div>
       </div>
 
-      <div class="about">
+      <div class="element">
         <div class="box">
           <h4 class="header">Tag Cloud</h4>
           <ul>
             <li><app-tag [name] = "'JavaScript'"></app-tag></li>
-            <li><app-tag [name] = "'HTML'">></app-tag></li>
-            <li><app-tag [name] = "'CSS'">></app-tag></li>
-            <li><app-tag [name] = "'C++'">></app-tag></li>
-            <li><app-tag [name] = "'Python'">></app-tag></li>
-            <li><app-tag [name] = "'Ardunio'">></app-tag></li>
+            <li><app-tag [name] = "'HTML'"></app-tag></li>
+            <li><app-tag [name] = "'CSS'"></app-tag></li>
+            <li><app-tag [name] = "'C++'"></app-tag></li>
+            <li><app-tag [name] = "'Python'"></app-tag></li>
+            <li><app-tag [name] = "'Ardunio'"></app-tag></li>
           </ul>
         </div>
       </div>
 
-      <div class="about">
+      <div class="element">
         <div class="box">
           <h4 class="header">Questions</h4>
           <div class="my-div">
@@ -68,7 +68,7 @@
       </div>
 
 
-      <div class="about">
+      <div class="element">
         <div class="box">
           <h4 class="header">Answers</h4>
           <div class="my-div">
