--- a/src/app/pages/questions/question-pool/question-pool.component.html
+++ b/src/app/pages/questions/question-pool/question-pool.component.html
@@ -1,3 +1,25 @@
-<p>
-  question-pool works!
-</p>
+<div class="container">
+  <div class="page-content">
+    <div class="col-md-8">
+      <div class="title">
+        <h1>Recent Questions</h1>
+      </div>
+      <div style="width: 100%;">
+        <div class="questions">
+          <app-question></app-question>
+          <app-question></app-question>
+          <app-question></app-question>
+          <app-question></app-question>
+          <app-question></app-question>
+          <app-question></app-question>
+          <app-question></app-question>
+          <app-question></app-question>
+        </div>
+        <app-paginator class="center" ></app-paginator>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <app-info></app-info>
+    </div>
+  </div>
+</div>
