--- a/src/app/pages/profile/questions-answers/questions-answers.component.html
+++ b/src/app/pages/profile/questions-answers/questions-answers.component.html
@@ -1,3 +1,46 @@
-<p>
-  questions-answers works!
-</p>
+<div class="container">
+  <div class="page-content">
+    <div class="col-md-7">
+      <div class="title">
+        <h1>My Questions</h1>
+      </div>
+      <div style="width: 100%;">
+        <div class="questions">
+          <app-question></app-question>
+          <app-question></app-question>
+          <app-question></app-question>
+          <app-question></app-question>
+          <app-question></app-question>
+        </div>
+        <app-paginator class="center" ></app-paginator>
+      </div>
+    </div>
+    <div class="col-md-5">
+      <div class="title">
+        <h1>My Answers</h1>
+      </div>
+      <div style="width: 100%">
+        <div class="my-div">
+          <a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>
+          <a class="my-a" href="#">Lorem ipsum set dolor</a>
+          <a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>
+          <a class="my-a" href="#">Lorem ipsum set dolor</a>
+          <a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>
+          <a class="my-a" href="#">Lorem ipsum set dolor</a>
+          <a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>
+          <a class="my-a" href="#">Lorem ipsum set dolor</a>
+          <a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>
+          <a class="my-a" href="#">Lorem ipsum set dolor</a>
+          <a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>
+          <a class="my-a" href="#">Lorem ipsum set dolor</a>
+          <a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>
+          <a class="my-a" href="#">Lorem ipsum set dolor</a>
+          <a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>
+          <a class="my-a" href="#">Lorem ipsum set dolor</a>
+          <a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>
+        </div>
+        <app-paginator class="center" ></app-paginator>
+      </div>
+    </div>
+  </div>
+</div>
