--- a/src/app/pages/questions/ask/ask.component.html
+++ b/src/app/pages/questions/ask/ask.component.html
@@ -24,7 +24,7 @@
 
       <div class="editor">
         <form [formGroup]="form">
-          <quill-editor #editor formControlName="editor"></quill-editor>
+          <quill-editor #editor formControlName="editor" [modules] = "configurations" ></quill-editor>
         </form>
       </div>
 
