--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,3 +1,22 @@
-<p>
-  users works!
-</p>
+<div class="container">
+  <div class="page-content">
+    <div class="col-md-12">
+      <div class="title">
+        <h1>ALL USERS</h1>
+      </div>
+      <app-profile-card></app-profile-card>
+      <app-profile-card></app-profile-card>
+      <app-profile-card></app-profile-card>
+      <app-profile-card></app-profile-card>
+      <app-profile-card></app-profile-card>
+      <app-profile-card></app-profile-card>
+      <app-profile-card></app-profile-card>
+      <app-profile-card></app-profile-card>
+      <app-profile-card></app-profile-card>
+      <app-profile-card></app-profile-card>
+      <app-profile-card></app-profile-card>
+      <app-profile-card></app-profile-card>
+    </div>
+    <app-paginator class="center" ></app-paginator>
+  </div>
+</div>
