--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,10 +1,27 @@
 <div class="container">
   <div class="card">
+
+    <div  class="profile">
+      <div class="profile-pic">
+        <img src="http://www.planwallpaper.com/static/images/desktop-year-of-the-tiger-images-wallpaper.jpg" alt="Avatar"
+             style="width:100%">
+      </div>
+      <div class="profile-con">
+        <div>
+          Nurlan Ilyasov
+        </div>
+        <div style="font-size: 0.9vw">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
+        </div>
+      </div>
+    </div>
+
     <div class="header">
       <h4>Six Great Tips for an Excelent Blog</h4>
     </div>
+
     <div class="image">
-      <img src="http://www.planwallpaper.com/static/images/desktop-year-of-the-tiger-images-wallpaper.jpg" alt="Avatar"
+      <img src="http://www.nfws.org.uk/Pudding%20the%20red%20fox.png" alt="Avatar"
            style="width:100%">
     </div>
     <div class="footer">
