--- a/src/app/shared/components/info/info.component.html
+++ b/src/app/shared/components/info/info.component.html
@@ -16,17 +16,10 @@
 <div class="element">
   <div class="box">
     <h4 class="header">Find Me On</h4>
-    <ul>
-      <li><a>f</a></li>
-      <li><a>f</a></li>
-      <li><a>f</a></li>
-      <li><a>f</a></li>
-      <li><a>f</a></li>
-      <li><a>f</a></li>
-      <li><a>f</a></li>
-    </ul>
+    <app-media-list></app-media-list>
   </div>
 </div>
+
 
 <div class="element">
   <div class="box">
@@ -70,3 +63,5 @@
     </div>
   </div>
 </div>
+
+
