--- a/src/app/pages/articles/article-pool/article-pool.component.html
+++ b/src/app/pages/articles/article-pool/article-pool.component.html
@@ -1,3 +1,23 @@
-<p>
-  article-pool works!
-</p>
+<div class="container">
+  <div class="page-content">
+    <div class="col-md-6">
+      <div class="cards">
+        <div class = "wrapper"><app-card></app-card></div>
+        <div class = "wrapper"><app-card></app-card></div>
+        <div class = "wrapper"><app-card></app-card></div>
+        <div class = "wrapper"><app-card></app-card></div>
+        <div class = "wrapper"><app-card></app-card></div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="cards">
+        <div class = "wrapper"><app-card></app-card></div>
+        <div class = "wrapper"><app-card></app-card></div>
+        <div class = "wrapper"><app-card></app-card></div>
+        <div class = "wrapper"><app-card></app-card></div>
+      </div>
+    </div>
+  </div>
+</div>
+<app-paginator class="center" ></app-paginator>
+
