--- a/src/app/pages/profile/contact/contact.component.html
+++ b/src/app/pages/profile/contact/contact.component.html
@@ -80,15 +80,7 @@
       <div class="element">
         <div class="box">
           <h4 class="header">Find Me On</h4>
-          <ul id="horizontal">
-            <li><a>f</a></li>
-            <li><a>f</a></li>
-            <li><a>f</a></li>
-            <li><a>f</a></li>
-            <li><a>f</a></li>
-            <li><a>f</a></li>
-            <li><a>f</a></li>
-          </ul>
+          <app-media-list></app-media-list>
         </div>
       </div>
     </div>
