--- a/src/app/shared/components/card/card.component.scss
+++ b/src/app/shared/components/card/card.component.scss
@@ -11,7 +11,6 @@
   border-width: 1px;
   //transition: 0.3s;
   width: 50%;
-
 }
 
 .image{
@@ -33,4 +32,26 @@
 
 .footer{
   padding: 20px 16px;
+}
+
+.profile{
+  padding: 20px 16px;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.1);
+  border-width: 1px;
+  height: 103px;
+
+  .profile-pic{
+    width: 15%;
+    height: 62px;
+    overflow: hidden;
+    float: left;
+  }
+
+  .profile-con{
+    width: 82%;
+    float: right;
+    height: 62px;
+    padining: 5px;
+  }
 }
