Design changes, profile card and article cards are added

--- a/src/app/pages/profile/home/home.component.html
+++ b/src/app/pages/profile/home/home.component.html
@@ -2,15 +2,27 @@
   <div class="page-content">
     <div class="col-md-8">
       <div class="cards">
-        <div class = "wrapper"><app-card></app-card></div>
-        <div class = "wrapper"><app-card></app-card></div>
-        <div class = "wrapper"><app-card></app-card></div>
-        <div class = "wrapper"><app-card></app-card></div>
+        <div class="wrapper col-lg-6">
+          <app-card></app-card>
+        </div>
+        <div class="wrapper col-lg-6">
+          <app-card></app-card>
+        </div>
+        <div class="wrapper col-lg-6">
+          <app-card></app-card>
+        </div>
+        <div class="wrapper col-lg-6">
+          <app-card></app-card>
+        </div>
       </div>
-      <app-paginator class="center" ></app-paginator>
+      <app-paginator class="center"></app-paginator>
     </div>
+
     <div class="col-md-4">
-      <app-info></app-info>
+      <div class="wrapper">
+        <app-info></app-info>
+      </div>
     </div>
   </div>
 </div>
+
