--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -4,18 +4,17 @@
       <div class="title">
         <h1>ALL USERS</h1>
       </div>
-      <app-profile-card></app-profile-card>
-      <app-profile-card></app-profile-card>
-      <app-profile-card></app-profile-card>
-      <app-profile-card></app-profile-card>
-      <app-profile-card></app-profile-card>
-      <app-profile-card></app-profile-card>
-      <app-profile-card></app-profile-card>
-      <app-profile-card></app-profile-card>
-      <app-profile-card></app-profile-card>
-      <app-profile-card></app-profile-card>
-      <app-profile-card></app-profile-card>
-      <app-profile-card></app-profile-card>
+      <app-profile-card class="col-lg-3 col-sm-6"></app-profile-card>
+      <app-profile-card class="col-lg-3 col-sm-6"></app-profile-card>
+      <app-profile-card class="col-lg-3 col-sm-6"></app-profile-card>
+      <app-profile-card class="col-lg-3 col-sm-6"></app-profile-card>
+      <app-profile-card class="col-lg-3 col-sm-6"></app-profile-card>
+      <app-profile-card class="col-lg-3 col-sm-6"></app-profile-card>
+      <app-profile-card class="col-lg-3 col-sm-6"></app-profile-card>
+      <app-profile-card class="col-lg-3 col-sm-6"></app-profile-card>
+      <app-profile-card class="col-lg-3 col-sm-6"></app-profile-card>
+      <app-profile-card class="col-lg-3 col-sm-6"></app-profile-card>
+      <app-profile-card class="col-lg-3 col-sm-6"></app-profile-card>
     </div>
     <app-paginator class="center" ></app-paginator>
   </div>
