--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,36 +1,9 @@
-<div class="container">
-  <div class="card">
-
-    <div  class="profile">
-      <div class="profile-pic">
-        <img src="http://www.planwallpaper.com/static/images/desktop-year-of-the-tiger-images-wallpaper.jpg" alt="Avatar"
-             style="width:100%">
-      </div>
-      <div class="profile-con">
-        <div>
-          Nurlan Ilyasov
-        </div>
-        <div style="font-size: 0.9vw">
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
-        </div>
-      </div>
-    </div>
-
-    <div class="header">
-      <h4>Six Great Tips for an Excelent Blog</h4>
-    </div>
-
-    <div class="image">
-      <img src="http://www.nfws.org.uk/Pudding%20the%20red%20fox.png" alt="Avatar"
-           style="width:100%">
-    </div>
-    <div class="footer">
-      <p>February 09/2016</p>
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and
-        typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-        unknown printer took
-      </p>
-    </div>
-  </div>
+<div class="paper"><img class="poster" src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/PD0XWZZSX5.jpg"/>
+  <h2>Featured</h2>
+  <h1>Back to Nature</h1>
+  <hr/>
+  <p>Down on the West Coast where the sand meets the crashing waves and your dreams come true.</p><a class="btn">Read
+    More </a>
+  <div class="space"></div>
 </div>
+
