--- a/src/app/shared/components/paginator/paginator.component.scss
+++ b/src/app/shared/components/paginator/paginator.component.scss
@@ -6,6 +6,7 @@
     padding: 8px 16px;
     text-decoration: none;
     transition: background-color .3s;
+    border-radius: 4px;
 
     &.active {
       background-color: darkgray;
