--- a/src/app/shared/components/profile-card/profile-card.component.html
+++ b/src/app/shared/components/profile-card/profile-card.component.html
@@ -1,6 +1,6 @@
 <!--<div class="container">-->
   <!--<div class="row">-->
-    <div class="col-lg-3 col-sm-6">
+    <!--<div class="col-lg-3 col-sm-6">-->
       <div class="card hovercard" >
         <div class="cardheader">
         </div>
@@ -19,7 +19,7 @@
           <app-media-list></app-media-list>
         </div>
       </div>
-    </div>
+    <!--</div>-->
 
   <!--</div>-->
 <!--</div>-->
