--- a/src/app/shared/components/info/info.component.html
+++ b/src/app/shared/components/info/info.component.html
@@ -26,48 +26,62 @@
 <!--</div>-->
 <!--</div>-->
 
+<!--will be deleted from here-->
+<div style="height: 50px"></div>
 
-<!--<div class="element">-->
-<!--<div class="box">-->
-<!--<h4 class="header">Tag Cloud</h4>-->
-<!--<ul>-->
-<!--<li><app-tag [name] = "'JavaScript'"></app-tag></li>-->
-<!--<li><app-tag [name] = "'HTML'"></app-tag></li>-->
-<!--<li><app-tag [name] = "'CSS'"></app-tag></li>-->
-<!--<li><app-tag [name] = "'C++'"></app-tag></li>-->
-<!--<li><app-tag [name] = "'Python'"></app-tag></li>-->
-<!--<li><app-tag [name] = "'Ardunio'"></app-tag></li>-->
-<!--</ul>-->
-<!--</div>-->
-<!--</div>-->
+<div class="element">
+  <div class="box">
+    <h4 class="header">Tag Cloud</h4>
+    <ul>
+      <li>
+        <app-tag [name]="'JavaScript'"></app-tag>
+      </li>
+      <li>
+        <app-tag [name]="'HTML'"></app-tag>
+      </li>
+      <li>
+        <app-tag [name]="'CSS'"></app-tag>
+      </li>
+      <li>
+        <app-tag [name]="'C++'"></app-tag>
+      </li>
+      <li>
+        <app-tag [name]="'Python'"></app-tag>
+      </li>
+      <li>
+        <app-tag [name]="'Ardunio'"></app-tag>
+      </li>
+    </ul>
+  </div>
+</div>
 
-<!--<div class="element">-->
-<!--<div class="box">-->
-<!--<h4 class="header">Questions</h4>-->
-<!--<div class="my-div">-->
-<!--<a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>-->
-<!--<a class="my-a" href="#">Lorem ipsum set dolor</a>-->
-<!--<a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>-->
-<!--<a class="my-a" href="#">Lorem ipsum set dolor</a>-->
-<!--<a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>-->
-<!--<a class="my-a" href="#">Lorem ipsum set dolor</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
+<div class="element">
+  <div class="box">
+    <h4 class="header">Questions</h4>
+    <div class="my-div">
+      <a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>
+      <a class="my-a" href="#">Lorem ipsum set dolor</a>
+      <a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>
+      <a class="my-a" href="#">Lorem ipsum set dolor</a>
+      <a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>
+      <a class="my-a" href="#">Lorem ipsum set dolor</a>
+    </div>
+  </div>
+</div>
 
 
-<!--<div class="element">-->
-<!--<div class="box">-->
-<!--<h4 class="header">Answers</h4>-->
-<!--<div class="my-div">-->
-<!--<a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>-->
-<!--<a class="my-a" href="#">Lorem ipsum set dolor</a>-->
-<!--<a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>-->
-<!--<a class="my-a" href="#">Lorem ipsum set dolor</a>-->
-<!--<a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>-->
-<!--<a class="my-a" href="#">Lorem ipsum set dolor</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
+<div class="element">
+  <div class="box">
+    <h4 class="header">Answers</h4>
+    <div class="my-div">
+      <a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>
+      <a class="my-a" href="#">Lorem ipsum set dolor</a>
+      <a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>
+      <a class="my-a" href="#">Lorem ipsum set dolor</a>
+      <a class="my-a" href="#">Lorem Elsass ipsum Oberschaeffolsheim Heineken</a>
+      <a class="my-a" href="#">Lorem ipsum set dolor</a>
+    </div>
+  </div>
+</div>
 
 
