--- a/src/app/pages/questions/question-pool/question-pool.component.html
+++ b/src/app/pages/questions/question-pool/question-pool.component.html
@@ -1,21 +1,16 @@
 <div class="container">
   <div class="page-content">
     <div class="col-md-8">
-      <div class="title">
-        <h1>Recent Questions</h1>
-      </div>
+      <!--<div class="title">-->
+      <!--&lt;!&ndash;<h1>Recent Questions</h1>&ndash;&gt;-->
+      <!--</div>-->
       <div style="width: 100%;">
         <div class="questions">
-          <app-question></app-question>
-          <app-question></app-question>
-          <app-question></app-question>
-          <app-question></app-question>
-          <app-question></app-question>
-          <app-question></app-question>
-          <app-question></app-question>
-          <app-question></app-question>
+          <div class="wrapper" *ngFor="let question of questions">
+            <app-question [question]="question"></app-question>
+          </div>
         </div>
-        <app-paginator class="center" ></app-paginator>
+        <app-paginator class="center"></app-paginator>
       </div>
     </div>
     <div class="col-md-4">
