--- a/src/app/shared/components/paginator/paginator.component.scss
+++ b/src/app/shared/components/paginator/paginator.component.scss
@@ -8,13 +8,17 @@
     transition: background-color .3s;
     border-radius: 4px;
 
+
     &.active {
-      background-color: darkgray;
-      color: white;
+      //background-color: darkgray;
+      //color: white;
+      box-shadow: 0 15px 35px rgba(50, 50, 90, .1), 0 5px 15px rgba(0, 0, 0, .07);
+
     }
 
     &:hover:not(.active) {
-      background-color: #ddd;
+      //background-color: #ddd;
+      box-shadow: 0 15px 35px rgba(50, 50, 90, .1), 0 5px 15px rgba(0, 0, 0, .07);
     }
   }
 }
